--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "import/no-duplicates": "off",
+    "import/no-extraneous-dependencies": "off",
     "react/jsx-filename-extension": [
       1,
       {
